<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>AFBAframework</groupId>
  <artifactId>AFBAframework</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>AFBAframework</name>
  <url>http://maven.apache.org</url>

 <properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties> 
 
     <dependencies> 
<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-sandwich</artifactId>
			<version>3.15.0</version>
		</dependency>
		
		      <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <scope>test</scope>
        </dependency>
        
         <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.4</version>
        </dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.15.0</version>
		</dependency>
		
		 <dependency> 
             <groupId>org.slf4j</groupId> 
             <artifactId>slf4j-simple</artifactId> 
             <version>1.6.4</version>
         </dependency> 
		

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>3.0.2</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>3.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>3.6.1</version>
		</dependency>


		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.17</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.17</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
		</dependency>

 
    </dependencies> 



 <build> 
 
 		<plugins> 

  
        <plugin> 
             <groupId>org.apache.maven.plugins</groupId> 
             <artifactId>maven-failsafe-plugin</artifactId> 
             <version>2.18</version> 
             <configuration> 
                   <testFailureIgnore>true</testFailureIgnore> 
                   <skipTests>false</skipTests> 
                   <includes> 
                   <include>**/runners/*TestRunner.java</include> 
                     </includes> 
             </configuration> 
             </plugin> 

 
 
 
             <plugin> 
                 <groupId>org.apache.maven.plugins</groupId> 
                 <artifactId>maven-surefire-plugin</artifactId> 
                 <version>2.18.1</version> 
                 <configuration> 
                     <parallel>classes</parallel> 
                     <forkMode>perthread</forkMode> 
                     <threadCount>10</threadCount> 
                     <reuseForks>false</reuseForks> 
                     <argLine>-Duser.language=en</argLine> 
                     <argLine>-Xmx1024m</argLine> 
                     <argLine>-XX:MaxPermSize=256m</argLine> 
                     <argLine>-Dfile.encoding=UTF-8</argLine> 
                     <useFile>false</useFile> 
                     <includes> 
                         <include>**/runners/*TestRunner*.java</include> 
                     </includes> 
                     <testFailureIgnore>true</testFailureIgnore> 
                 </configuration> 
             </plugin> 
 
 
 
 
             <plugin> 
                 <groupId>net.masterthought</groupId> 
                 <artifactId>maven-cucumber-reporting</artifactId> 
                 <version>4.4.0</version> 
                <executions> 
                     <execution> 
                         <id>execution</id> 
                         <phase>verify</phase> 
                         <goals> 
                             <goal>generate</goal> 
                         </goals> 
                         <configuration> 
                             <projectName>cucumber-jvm-example</projectName> 
                             <!-- output directory for the generated report --> 
                             <outputDirectory>${project.build.directory}</outputDirectory> 
                             <!-- optional, defaults to outputDirectory if not specified --> 
                             <inputDirectory>${project.build.directory}</inputDirectory> 
 
 
                             <jsonFiles> 
                                 <!-- supports wildcard or name pattern --> 
                                 <param>**/json-reports/*.json</param> 
                             </jsonFiles>                              <classificationFiles> 
                                 <!-- supports wildcard or name pattern --> 
                                 <param>sample.properties</param> 
                                 <param>other.properties</param> 
                             </classificationFiles> 
                         </configuration> 
                     </execution> 
                 </executions> 
             </plugin> 
 
 
 
 
         </plugins> 
     </build> 
 

 
 </project> 

